Bunch o' style fixes (#927)
* Fix Nav logout cutoff on medium and higher devices.

* Fix nav dropdown issues.

* Universally change font for buttons.

* Removing debugging colors.

--- a/resources/assets/scss/navigation.scss
+++ b/resources/assets/scss/navigation.scss
@@ -5,6 +5,8 @@
 .navigation {
   background-color: $white;
   height: 84px;
+  position: relative;
+  z-index: 100;
 
   @include media($medium) {
     height: 110px;
@@ -17,7 +19,7 @@
       color: $white;
       display: block;
       float: left;
-      font-weight: $weight-normal;
+      margin: 5px 0;
       text-shadow: none;
       text-transform: none;
     }
@@ -34,9 +36,17 @@
 }
 
 .navigation__menu {
+  overflow: auto;
+
   > .wrapper {
     @include media($medium) {
       float: right;
     }
+  }
+}
+
+.navigation__primary {
+  @include media($medium) {
+    float: left;
   }
 }
